--- a/Umbraco.Site/Views/MacroPartials/Contact Form.cshtml
+++ b/Umbraco.Site/Views/MacroPartials/Contact Form.cshtml
@@ -5,7 +5,7 @@
 		<div class="col-md-6">
 			<input type="text" placeholder="What's your name" id="contact_name" />
 		</div>
-		<div class="col-md-6 pull-right">
+		<div class="col-md-6">
 			<input type="email" placeholder="Where should we email you?" id="contact_email" />
 		</div>
 		<div class="col-md-12">
