--- a/Umbraco.Site/Views/MacroPartials/Players.cshtml
+++ b/Umbraco.Site/Views/MacroPartials/Players.cshtml
@@ -7,10 +7,45 @@
 @using System.Web.Mvc
 
 @{ 
-	var startNodeId = Model.MacroParameters["startNodeId"];
-	var eventNode = Umbraco.TypedContent(startNodeId);
-	var eventList = eventNode.Children.OrderBy(x => x.GetPropertyValue<DateTime>("date"));
+    var startNodeId = Model.MacroParameters["startNodeId"];
+
+    if (String.IsNullOrEmpty(startNodeId.ToString())) {
+        startNodeId = CurrentPage.Id;
+    }
+    bool isFrontpage = (Model.MacroParameters["isFrontpage"].ToString() == "1" ? true : false);
+
+    var playersNode = Umbraco.TypedContent(startNodeId);
+    var playersList = playersNode.Children.OrderBy(x => x.GetPropertyValue<string>("playerName"));
+
+    var items = Model.Content.Children
+        .OrderBy(p => p.GetPropertyValue<string>("playerName"))
+        .ToList();
+
+    //Paging
+
+    int pageSize = (isFrontpage ? 4 : 16);
+
+    var page = 1;
+    int.TryParse(Request.QueryString["page"], out page);
+
+    var totalPages = (int)Math.Ceiling((double)playersList.Count() / (double)pageSize);
+
+    if (page > totalPages)
+    {
+        page = totalPages;
+    }
+    else if (page < 1)
+    {
+        page = 1;
+    }
+
+    items = items
+        .Skip((page - 1) * pageSize)
+        .Take(pageSize)
+        .ToList();
+
 }
+
 @if (startNodeId != null)
 {
 	var startNode = Umbraco.Content(startNodeId);
@@ -19,7 +54,7 @@
 	if (selection.Any())
 	{
 		<ul class="row players">
-			@foreach (var item in eventList.OrderBy(x => x.GetPropertyValue<DateTime>("date")).Take(4))
+			@foreach (var item in items.Take(pageSize))
 			{
 				var name = item.Name;
 				if (name.Length > 35)
@@ -39,7 +74,7 @@
 					summary = summary.Substring(0, 130) + "...";
 				}
 
-				<li class="col-md-3 col-sm-6 relative">
+				<li class="col-md-3 col-xs-6 relative">
 					<a href="@item.Url">
 						<span class="image" style="background-image: url(@image?width=580&mode=crop&quality=80&format=jpg);"></span>
 						<div class="player-name">
@@ -54,5 +89,104 @@
 				</li>
 			}
 		</ul>
+
+		if (totalPages > 1) {
+			var baseQueryString = "?";
+			<div class="container">
+				<div class="pagination list-unstyled pager clear">
+					@if (page == 1)
+					{
+						<span class="arrow"><i class="icon-angle-left"></i></span>
+					}
+					else
+					{
+						var queryString = baseQueryString + "page=" + (page - 1);
+						<a href="@queryString"><i class="icon-angle-left"></i></a>
+					}
+
+					@if (totalPages > 8)
+					{
+
+						if (page <= 5)
+						{
+
+							for (var i = 1; i < 8; i++)
+							{
+								var queryString = baseQueryString + "page=" + i;
+								if (i == page) {
+									<span>@i</span>
+								} else {
+									<a href="@queryString">@i</a>
+								}
+							}
+
+						}
+						else if (page > 5)
+						{
+							var queryString = baseQueryString + "page=" + 1;
+							<a href="@queryString" class="underline">1</a>
+
+							if (page > (totalPages - 4))
+							{
+								for (var i = (page - 4); i < (totalPages + 1); i++)
+								{
+									queryString = baseQueryString + "page=" + i;
+									if (i == page) {
+										<span>@i</span>
+									} else {
+										<a href="@queryString">@i</a>
+									}
+								}
+							}
+
+							else
+							{
+								for (var i = (page - 3); i < (page + 4); i++)
+								{
+									queryString = baseQueryString + "page=" + i;
+									if (i == page) {
+										<span>@i</span>
+									} else {
+										<a href="@queryString">@i</a>
+									}
+								}
+							}
+
+						}
+
+						if (totalPages != page)
+						{
+							var queryString = baseQueryString + "page=" + totalPages;
+							<a href="@queryString" class="underline">@totalPages</a>
+						}
+
+					}
+					else
+					{
+						for (var i = 1; i < (totalPages + 1); i++)
+						{
+							var queryString = baseQueryString + "page=" + i;
+							if (i == page) {
+								<span>@i</span>
+							} else {
+								<a href="@queryString">@i</a>
+							}
+						}
+					}
+
+					@if (totalPages == page)
+					{
+						<span class="arrow"><i class="icon-angle-right"></i></span>
+					}
+					else
+					{
+						var queryString = baseQueryString + "page=" + (page + 1);
+						<a href="@queryString"><i class="icon-angle-right"></i></a>
+					}
+
+				</div>
+			</div>
+		}
+
 	}
 }
