--- a/Umbraco.Site/Views/Partials/_PageUpdate.cshtml
+++ b/Umbraco.Site/Views/Partials/_PageUpdate.cshtml
@@ -6,13 +6,10 @@
 
 <div class="update-message">
 
-    <div class="inner">
-        <form action="/umbraco/surface/cookie/setcookie">
-            <h3 class="no-margin">Update in Progress</h3>
-            <p>We are really really sorry</p>
-
-            <a href="" id="update-in-progress-button" class="btn btn-primary text-white">Dismiss this</a>
-        </form>
-    </div>
+	<div class="inner">
+		<img src="/media/1003/logowhite.png" alt="logo" />
+		<h3 class="no-margin">We're currently a bit shy!</h3>
+		<p>Check back in a few days</p>
+	</div>
 
 </div>
