--- a/Umbraco.Site/sass/rustikus/custom/_slider.scss
+++ b/Umbraco.Site/sass/rustikus/custom/_slider.scss
@@ -15,6 +15,7 @@
 			color: $white;
 			//text-align: center;
 			font-size: 60px;
+			text-align: left;
 			margin: 0 auto;
 			max-width: 90%;
 			&:nth-child(2) {
