--- a/Umbraco.Site/Views/Master.cshtml
+++ b/Umbraco.Site/Views/Master.cshtml
@@ -31,6 +31,14 @@
 <![endif]-->
 <html>
 <head>
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-TLWL4Z6');</script>
+	<!-- End Google Tag Manager -->
+
 	@* All meta tags are rendered in this partial*@
 	@Html.Partial("_Meta")
 
@@ -60,6 +68,10 @@
 </head>
 
 <body class="@bodyClass @doctype @pageId @pageName @updateClass @customClass">
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TLWL4Z6"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 
 	@if (updateInProgress)
 	{
