--- a/Umbraco.Site/sass/rustikus/modules/custom/_media-label.scss
+++ b/Umbraco.Site/sass/rustikus/modules/custom/_media-label.scss
@@ -13,7 +13,7 @@ body {
 		z-index: 9999;
 		text-transform: uppercase;
 		color: #fff;
-
+		display: none;
 		@include desktop-xxl {
 			content: "Desktop XXL";
 			background: #34495e;
